[gd_scene load_steps=9 format=3 uid="uid://c7a4wvc65f57"]

[ext_resource type="Script" path="res://scenes/ActivityView/ActivityView.gd" id="1"]
[ext_resource type="FontFile" uid="uid://bvjo321fa54x8" path="res://fonts/Roboto-Bold.ttf" id="2_t4xsa"]
[ext_resource type="Script" path="res://scenes/ActivityView/RegisterCommand.gd" id="3_pkuod"]
[ext_resource type="PackedScene" uid="uid://dr8kkwn42djaf" path="res://components/PrimaryButton/PrimaryButton.tscn" id="5"]
[ext_resource type="Script" path="res://scenes/ActivityView/RegisterSteam.gd" id="5_jlrfh"]
[ext_resource type="Script" path="res://scenes/ActivityView/UpdateActivity.gd" id="6_62yea"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtb8l"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.192157, 0.2, 0.219608, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8xph0"]

[node name="ActivityView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Title" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_t4xsa")
theme_override_font_sizes/font_size = 32
text = "Activity"

[node name="Sections" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="RegisterCommand" type="PanelContainer" parent="Sections"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mtb8l")
script = ExtResource("3_pkuod")

[node name="VB" type="VBoxContainer" parent="Sections/RegisterCommand"]
layout_mode = 2

[node name="Label" type="Label" parent="Sections/RegisterCommand/VB"]
layout_mode = 2
text = "Register Command"

[node name="HB" type="HBoxContainer" parent="Sections/RegisterCommand/VB"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 8

[node name="CmdLineEdit" type="LineEdit" parent="Sections/RegisterCommand/VB/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="RegisterCommandBtn" parent="Sections/RegisterCommand/VB/HB" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
text = "Register Command"

[node name="RegisterSteam" type="PanelContainer" parent="Sections"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mtb8l")
script = ExtResource("5_jlrfh")

[node name="VB" type="VBoxContainer" parent="Sections/RegisterSteam"]
layout_mode = 2

[node name="Label" type="Label" parent="Sections/RegisterSteam/VB"]
layout_mode = 2
text = "Register Steam"

[node name="HB" type="HBoxContainer" parent="Sections/RegisterSteam/VB"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 8

[node name="SteamLineEdit" type="LineEdit" parent="Sections/RegisterSteam/VB/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="RegisterSteamBtn" parent="Sections/RegisterSteam/VB/HB" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
text = "Register Steam"

[node name="UpdateActivity" type="PanelContainer" parent="Sections"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mtb8l")
script = ExtResource("6_62yea")

[node name="VB" type="VBoxContainer" parent="Sections/UpdateActivity"]
layout_mode = 2

[node name="Label" type="Label" parent="Sections/UpdateActivity/VB"]
layout_mode = 2
text = "Update Activity"

[node name="ActivityType" type="HBoxContainer" parent="Sections/UpdateActivity/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="Sections/UpdateActivity/VB/ActivityType"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Application ID"

[node name="ActivityTypeOptionButton" type="OptionButton" parent="Sections/UpdateActivity/VB/ActivityType"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
item_count = 4
selected = 0
popup/item_0/text = "Playing"
popup/item_0/id = 0
popup/item_1/text = "Streaming"
popup/item_1/id = 1
popup/item_2/text = "Listening"
popup/item_2/id = 2
popup/item_3/text = "Watching"
popup/item_3/id = 3

[node name="GC" type="GridContainer" parent="Sections/UpdateActivity/VB"]
layout_mode = 2
theme_override_constants/h_separation = 8
columns = 6

[node name="Label" type="Label" parent="Sections/UpdateActivity/VB/GC"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Application ID"

[node name="ApplicationIdLineEdit" type="LineEdit" parent="Sections/UpdateActivity/VB/GC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Label2" type="Label" parent="Sections/UpdateActivity/VB/GC"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "State"

[node name="StateLineEdit" type="LineEdit" parent="Sections/UpdateActivity/VB/GC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "This is the state"

[node name="Label3" type="Label" parent="Sections/UpdateActivity/VB/GC"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Details"

[node name="DetailsLineEdit" type="LineEdit" parent="Sections/UpdateActivity/VB/GC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Here is the details"

[node name="Timestamps" type="VBoxContainer" parent="Sections/UpdateActivity/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="Sections/UpdateActivity/VB/Timestamps"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t4xsa")
theme_override_font_sizes/font_size = 14
text = "Timestamps"

[node name="HB" type="HBoxContainer" parent="Sections/UpdateActivity/VB/Timestamps"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Sections/UpdateActivity/VB/Timestamps/HB"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Start Timestamp"

[node name="StartSpinbox" type="SpinBox" parent="Sections/UpdateActivity/VB/Timestamps/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
max_value = 1e+10
allow_greater = true

[node name="HS" type="VSeparator" parent="Sections/UpdateActivity/VB/Timestamps/HB"]
layout_mode = 2
theme_override_constants/separation = 8
theme_override_styles/separator = SubResource("StyleBoxEmpty_8xph0")

[node name="Label2" type="Label" parent="Sections/UpdateActivity/VB/Timestamps/HB"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "End Timestamp"

[node name="EndSpinbox" type="SpinBox" parent="Sections/UpdateActivity/VB/Timestamps/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
max_value = 1e+10
allow_greater = true

[node name="Assets" type="VBoxContainer" parent="Sections/UpdateActivity/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="Sections/UpdateActivity/VB/Assets"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t4xsa")
theme_override_font_sizes/font_size = 14
text = "Assets"

[node name="HB" type="GridContainer" parent="Sections/UpdateActivity/VB/Assets"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 4

[node name="Label" type="Label" parent="Sections/UpdateActivity/VB/Assets/HB"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Large Asset Image"

[node name="LargeAssetImageLineEdit" type="LineEdit" parent="Sections/UpdateActivity/VB/Assets/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "logo_vertical_color"

[node name="Label2" type="Label" parent="Sections/UpdateActivity/VB/Assets/HB"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Large Asset Text"

[node name="LargeAssetTextLineEdit" type="LineEdit" parent="Sections/UpdateActivity/VB/Assets/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "This is large image text"

[node name="Label3" type="Label" parent="Sections/UpdateActivity/VB/Assets/HB"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Small Asset Image"

[node name="SmallAssetImageLineEdit" type="LineEdit" parent="Sections/UpdateActivity/VB/Assets/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "nativescript"

[node name="Label4" type="Label" parent="Sections/UpdateActivity/VB/Assets/HB"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Small Asset Text"

[node name="SmallAssetTextLineEdit" type="LineEdit" parent="Sections/UpdateActivity/VB/Assets/HB"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "This is small text"

[node name="Party" type="VBoxContainer" parent="Sections/UpdateActivity/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="Sections/UpdateActivity/VB/Party"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t4xsa")
theme_override_font_sizes/font_size = 14
text = "Party"

[node name="Party" type="GridContainer" parent="Sections/UpdateActivity/VB/Party"]
layout_mode = 2
size_flags_horizontal = 0
columns = 6

[node name="Label" type="Label" parent="Sections/UpdateActivity/VB/Party/Party"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "ID"

[node name="PartyIdLineEdit" type="LineEdit" parent="Sections/UpdateActivity/VB/Party/Party"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "42"

[node name="Label2" type="Label" parent="Sections/UpdateActivity/VB/Party/Party"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Current Size"

[node name="PartySizeCurrentSpinBox" type="SpinBox" parent="Sections/UpdateActivity/VB/Party/Party"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
value = 1.0
allow_greater = true

[node name="Label3" type="Label" parent="Sections/UpdateActivity/VB/Party/Party"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Max Size"

[node name="PartySizeMaxSpinBox" type="SpinBox" parent="Sections/UpdateActivity/VB/Party/Party"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
value = 50.0
allow_greater = true

[node name="Label4" type="Label" parent="Sections/UpdateActivity/VB/Party/Party"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Match Secret"

[node name="MatchSecretLineEdit" type="LineEdit" parent="Sections/UpdateActivity/VB/Party/Party"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Match Secret Here"

[node name="Label5" type="Label" parent="Sections/UpdateActivity/VB/Party/Party"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Join Secret"

[node name="JoinSecretLineEdit" type="LineEdit" parent="Sections/UpdateActivity/VB/Party/Party"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Join Secret Here"

[node name="Label6" type="Label" parent="Sections/UpdateActivity/VB/Party/Party"]
layout_mode = 2
theme_override_colors/font_color = Color(0.705882, 0.705882, 0.705882, 1)
text = "Spectate Secret"

[node name="SpectateSecretLineEdit" type="LineEdit" parent="Sections/UpdateActivity/VB/Party/Party"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Spectate Secret Here"

[node name="InstanceCheckBox" type="CheckBox" parent="Sections/UpdateActivity/VB/Party/Party"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Instance"

[node name="HB" type="HBoxContainer" parent="Sections/UpdateActivity/VB"]
layout_mode = 2

[node name="UpdateActivityBtn" parent="Sections/UpdateActivity/VB/HB" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Update Activity"

[node name="ClearActivityBtn" parent="Sections/UpdateActivity/VB/HB" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Clear Activity"
